--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -18,7 +18,7 @@ services:
       - db
 
   db:
-    image: postgres:13-alpine
+    image: postgres:alpine
     restart: always
     volumes:
       - postgres-data:/var/lib/postgresql/data
